Optimize Memory handling while object creation